deploy: cb12c6f332dda754219e29cb86017d41f04a8ba0

--- a/manifest.json
+++ b/manifest.json
@@ -225,7 +225,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Buffs.OilProducerBuff.html",
-          "hash": "/K0MiCEyHefAUni3vdlazw=="
+          "hash": "s/lqRbtkc8P8kaxjL5/GcA=="
         }
       },
       "is_incremental": false,
@@ -333,7 +333,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Buffs.html",
-          "hash": "oQ8LvY2Vme6V9hloN8R5hQ=="
+          "hash": "OOoxIXbNiHj4y6twWm3Zmg=="
         }
       },
       "is_incremental": false,
@@ -1677,7 +1677,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Mechanics.DemonGates.DemonGateType.html",
-          "hash": "5r6Arh7TE2rk/tz28Xf+ag=="
+          "hash": "ygv1SO+5rJxJSeFtsbRuWA=="
         }
       },
       "is_incremental": false,
@@ -1689,7 +1689,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Mechanics.DemonGates.FocalDemonGate.html",
-          "hash": "ODfumQYZ5/QMveha9Yclbg=="
+          "hash": "zPX/hE439t8qBXHj09b4zw=="
         }
       },
       "is_incremental": false,
@@ -1845,7 +1845,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.AnimalCompanion.html",
-          "hash": "deNQoEXEyGjJhJh1vccRJw=="
+          "hash": "znnmMpkh4Fg/X/ejNflzmg=="
         }
       },
       "is_incremental": false,
@@ -1857,7 +1857,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.AnimationSpeedMultiplier.html",
-          "hash": "KqXLI4YiDQFd21kDEgLUpg=="
+          "hash": "BfqXD235ok64Sbb/52PR8A=="
         }
       },
       "is_incremental": false,
@@ -1869,7 +1869,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.Execute.html",
-          "hash": "s+z8H82uaCkBa68ORbXFPw=="
+          "hash": "aKHAyomCVutZtuGaDS9CQA=="
         }
       },
       "is_incremental": false,
@@ -1881,7 +1881,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.HideousAppendages.html",
-          "hash": "eLmeOcqJc7erz8uxgnFcNg=="
+          "hash": "cuJD6aTwA527/RTu5ILaIA=="
         }
       },
       "is_incremental": false,
@@ -1893,7 +1893,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.PersistentSoul.html",
-          "hash": "3XfTT+6JrfPJa3l6nY5k5Q=="
+          "hash": "d2MkZRd/lSu89SeFDf59xQ=="
         }
       },
       "is_incremental": false,
@@ -1905,7 +1905,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.ProvidesIncome.html",
-          "hash": "OlaOJ9EUSnpfCt2LCynBig=="
+          "hash": "vKSIpRCNeOFOklK1JC5/Hg=="
         }
       },
       "is_incremental": false,
@@ -1917,7 +1917,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.RegionRestricted.html",
-          "hash": "OjaXpLfCadSyNGAJN/kAkw=="
+          "hash": "p6xpcmEL4mbbUEdnRcxbyA=="
         }
       },
       "is_incremental": false,
@@ -1929,7 +1929,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.ResurrectionAura.html",
-          "hash": "rniKtElI0oMbe6AGv1k2fg=="
+          "hash": "hCuVhytkq0hl7gq2bgLSRw=="
         }
       },
       "is_incremental": false,
@@ -1941,7 +1941,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.SpellOnAttack.html",
-          "hash": "yr4ixBhrWMtECtfOIDlHzA=="
+          "hash": "yJEgToek5koIehylnTPdLQ=="
         }
       },
       "is_incremental": false,
@@ -1953,7 +1953,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.SpellResistanceAura.html",
-          "hash": "wYYzRKxd0nCesFIYf6qu3g=="
+          "hash": "D2gG+wFDIJOyGSvcVxzfIw=="
         }
       },
       "is_incremental": false,
@@ -1965,7 +1965,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilities.WarglaivesOfAzzinoth.html",
-          "hash": "N/wDXhBZ1Wdgl399LsfGOw=="
+          "hash": "6ldh6nNi8I2BcqmCuOk98Q=="
         }
       },
       "is_incremental": false,
@@ -2001,7 +2001,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.PassiveAbilitySystem.PassiveAbility.html",
-          "hash": "ElYkdQwYBziYkfsRKc5QVQ=="
+          "hash": "k9UKFZymkaBlwZ3/p3ffxw=="
         }
       },
       "is_incremental": false,
@@ -2097,7 +2097,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Powers.OilPower.html",
-          "hash": "LsxRz4+k9bLKEkCxsjAQvA=="
+          "hash": "L4Gz2jP+0xzkEcqQXa/5yg=="
         }
       },
       "is_incremental": false,
@@ -2145,7 +2145,7 @@
       "output": {
         ".html": {
           "relative_path": "api-macroTools/MacroTools.Powers.html",
-          "hash": "XK2fusawujLnJhg0IElCsQ=="
+          "hash": "OAdwbCuXyCSxjH8MHZvCnQ=="
         }
       },
       "is_incremental": false,
@@ -4005,7 +4005,19 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Mechanics.Goblins.NuclearLaunch.html",
-          "hash": "r+zGVY/9BfhyL1tGJMp02w=="
+          "hash": "74xZoZZ/mupTlfNij+JCFQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "ManagedReference",
+      "source_relative_path": "api-source/WarcraftLegacies.Source.Mechanics.Goblins.NuclearLaunchWarning.yml",
+      "output": {
+        ".html": {
+          "relative_path": "api-source/WarcraftLegacies.Source.Mechanics.Goblins.NuclearLaunchWarning.html",
+          "hash": "UipMYUGjnBF8Bw5LqD7iBA=="
         }
       },
       "is_incremental": false,
@@ -4017,7 +4029,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Mechanics.Goblins.OilProducer.html",
-          "hash": "H8qDgO8PNfFUvHy4y5yCyw=="
+          "hash": "6mv5yO3ToCXXGmKoA5sstw=="
         }
       },
       "is_incremental": false,
@@ -4029,7 +4041,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Mechanics.Goblins.OilRigConstructor.html",
-          "hash": "zzCFsHvWENMHATHgnoIh+g=="
+          "hash": "srA77az2w5RRXJf/RvBXUw=="
         }
       },
       "is_incremental": false,
@@ -4041,7 +4053,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Mechanics.Goblins.OilUser.html",
-          "hash": "lQsKMe9tOhhVHyt6WdmitA=="
+          "hash": "FsKS5wqfVAMrFMjl+gOVgg=="
         }
       },
       "is_incremental": false,
@@ -4053,7 +4065,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Mechanics.Goblins.Trader.html",
-          "hash": "rc4Skxa1Df97rL1wiA4buA=="
+          "hash": "3uNBRkS29OAOvdGXALThow=="
         }
       },
       "is_incremental": false,
@@ -4065,7 +4077,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Mechanics.Goblins.html",
-          "hash": "h0v56wrz05LfEbFGXRlJyA=="
+          "hash": "vrV9pR8sGe4BPstMkEHjaQ=="
         }
       },
       "is_incremental": false,
@@ -7905,7 +7917,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Setup.Spells.GoblinSpellSetup.html",
-          "hash": "Q73HStESieJEpKGrAMbrgA=="
+          "hash": "JsqSnD/1FmCG1oqPJmHn/g=="
         }
       },
       "is_incremental": false,
@@ -8001,7 +8013,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/WarcraftLegacies.Source.Setup.Spells.html",
-          "hash": "rQcBcsV27/mZU6GC5IE8mQ=="
+          "hash": "sKFU/RRGhXzO3mky/CTqfA=="
         }
       },
       "is_incremental": false,
@@ -8133,7 +8145,7 @@
       "output": {
         ".html": {
           "relative_path": "api-source/toc.html",
-          "hash": "TZ8o8OFClWHtVneHZrho7Q=="
+          "hash": "rkaU0CM9Im7QTr9qO0SzDg=="
         }
       },
       "is_incremental": false,
@@ -8208,7 +8220,7 @@
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build",
-          "total_file_count": 676,
+          "total_file_count": 677,
           "skipped_file_count": 0
         },
         "TocDocumentProcessor": {
